[workspace.package]
authors = ["Olga Kuniavskaia <olga.kuniavskaia@nearone.org>"]

[workspace]
resolver = "2"
members = [
    "connector",
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.dependencies]
near-sdk = "5.2.0"
near-contract-standards = "5.2.0"
hex = "0.4.2"
borsh = "1.5.1"
serde = { version = "1.0.200", features = ["derive"] }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.3.0" }
near-workspaces = "0.12.0"
bitcoin-types = { path = "types" }
btc-types = { git = "https://github.com/Near-One/btc-light-client-contract" }
